Minor API changes
